delete article ok

--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -2,9 +2,10 @@
 .cards {
 	color: red;
 	list-style-type: none;
+	padding-inline-start: 0;
+	margin-bottom: 0;
 }
 
 .invalid-feedback {
 	color: red;
-	list-style-type: none;
 }
