--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -496,3 +496,17 @@ textarea {
     margin: 10px auto;
     display: block;
 }
+
+.status-banner {
+    position: absolute;
+    top: 10px;
+    left: -10px;
+    background-color: #f0a10f;
+    color: white;
+    padding: 5px 15px;
+    font-size: 1.2em;
+    font-weight: bold;
+    rotate: -30deg;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
