display and aesthetics, modification management

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,10 +64,11 @@
 					Détail de la vente
 				</a>
 				<a class="details-btn-modify"
-				   th:if="${item.seller.email == #authentication.name &&
-               item.soldArticles.startDateAuctions.isAfter(T(java.time.LocalDate).now())
-               ||
-               item.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now())}"
+				   th:if="${#authorization.expression('isAuthenticated()') &&
+				   item.seller.email == #authentication.name &&
+				   (item.soldArticles.startDateAuctions.isAfter(T(java.time.LocalDate).now())
+				   ||
+				   item.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now()))}"
 				   th:href="@{/sales/edit/{id}(id=${item.soldArticles.idArticle})}">
 					Modifier
 				</a>
