--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -81,21 +81,28 @@
 	</form>
 
 	<form th:action="@{/sales/auctions}" method="post" th:object="${soldArticleViewModel}">
+		<input type="hidden" th:field="*{soldArticles.idArticle}" />
 		<div class="form-container">
 			<input type="hidden" th:field="*{soldArticles.idArticle}"/>
 			<div class="form-group">
 				<h5>Prix de vente : <span data-th-text="*{soldArticles.initialPrice}"></span></h5>
 			</div>
-			<div class="form-group">
+			<div class="form-group"  th:if="${soldArticleViewModel.soldArticles.startDateAuctions.isBefore(T(java.time.LocalDate).now())
+               ||
+               soldArticleViewModel.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now())}">
 				<h5>Nouveaux prix : <span data-th-text="*{soldArticles.priceSale}"></span></h5>
 			</div>
 
-			<div class="form-group">
+			<div class="form-group" th:if="${soldArticleViewModel.soldArticles.startDateAuctions.isBefore(T(java.time.LocalDate).now())
+               ||
+               soldArticleViewModel.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now())}">
 				<label for="amountAuctions">Montant de l'enchère</label>
 				<input id="amountAuctions" type="number" name="amountAuctions" th:value="*{soldArticles.initialPrice}" class="form-control" />
 			</div>
 
-			<div class="form-actions">
+			<div class="form-actions" th:if="${soldArticleViewModel.soldArticles.startDateAuctions.isBefore(T(java.time.LocalDate).now())
+               ||
+               soldArticleViewModel.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now())}">
 				<button type="submit" class="btn btn-primary">Nouvelle Offre</button>
 			</div>
 		</div>
