--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -89,7 +89,7 @@
 			<textarea id="description" class="form-control" data-th-field="*{soldArticles.description}" placeholder="Entrez une description"></textarea>
 		</div>
 
-			<h4>Lieu de pickUp</h4>
+			<h4>Lieu de retrait</h4>
 
 			<div class="form-group">
 				<label for="pickUpLocationRoad">Rue</label>
@@ -105,7 +105,6 @@
 				<label for="pickUpLocationCity">Ville</label>
 				<input type="text" id="pickUpLocationCity" class="form-control" data-th-field="*{pickUpLocation.city}" placeholder="Entrez la ville" />
 			</div>
-		</div>
 
 		<div class="form-actions">
 			<button type="submit" class="btn btn-primary">Valider</button>
