--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -69,7 +69,7 @@
 			</div>
 
 			<div class="form-group">
-				<h5>Lieu de pickUp : <span data-th-text="*{pickUpLocation.road}"></span> <span data-th-text="*{pickUpLocation.zipPass}"></span> <span data-th-text="*{pickUpLocation.city}"></span></h5>
+				<h5>Lieu de retrait : <span data-th-text="*{pickUpLocation.road}"></span> <span data-th-text="*{pickUpLocation.zipPass}"></span> <span data-th-text="*{pickUpLocation.city}"></span></h5>
 			</div>
 		</div>
 
