--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -61,8 +61,18 @@
 				</div>
 
 				<div class="form-group">
-					<h5>Adresse : <span data-th-text="*{road}"></span> <span data-th-text="*{zipPass}"></span> <span data-th-text="*{city}"></span></h5>
+					<h5>Crédits disponibles : <span data-th-text="*{credit}"></span></h5>
 				</div>
+
+				<div class="form-group">
+					<h5>
+						<span data-th-text="*{road}"></span><br><br>
+						<span data-th-text="*{zipPass}"></span><br><br>
+						<span data-th-text="*{city}"></span>
+					</h5>
+				</div>
+
+
 
 				<div class="form-group">
 					<label for="pictureProfil">Photo de profil</label>
